analysis/low-level-api-fir/testData/getOrBuildFir/invalidCode/secondaryConstructor.kt
annotation class JsQualifier : kotlin.Annotation {
    public constructor JsQualifier(<expr>value</expr>: kotlin.String)

    public final val value: kotlin.String { get; }
}
